--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "livewire/livewire": "^3.1",
+        "pecotamic/sitemap": "^1.4",
         "rias/statamic-collection-groups": "^1.1",
         "statamic/cms": "^5.0"
     },
